--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -9,7 +9,7 @@
   <div class="login-body">
     <form [formGroup]="form">
       <div>
-        <input type="text" formControlName="account" placeholder="请输入用户名" nz-input>
+        <input type="text" formControlName="loginname" placeholder="请输入用户名" nz-input>
       </div>
       <div>
         <input type="password" formControlName="password" placeholder="请输入密码" nz-input>
