--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -1,10 +1,13 @@
 @import "../../assets/less/vars";
+@header-height: 50px;
+@nav-height: 36px;
+@side-width: 200px;
 .main-page {
   .main-header {
     background-color: @color-border;
     text-align: right;
-    height: 50px;
-    line-height: 50px;
+    height: @header-height;
+    line-height: @header-height;
     padding: 0 20px;
     display: flex;
     justify-content: space-between;
@@ -12,7 +15,69 @@
       font-size: 18px;
     }
   }
-  .main-content {
-    padding: 20px;
+  .main-nav {
+    margin-bottom: 0;
+    padding-left: @side-width;
+    height: @nav-height;
+    line-height: @nav-height;
+    border-bottom: 1px solid @color-border;
+    .main-nav-li {
+      padding: 0 30px;
+      float: left;
+      position: relative;
+      cursor: pointer;
+      &:hover {
+        color: @primary-color;
+      }
+      .border-bottom {
+        position: absolute;
+      }
+      &.active {
+        color: @primary-color;
+        .border-bottom {
+          height: 2px;
+          width: 80%;
+          background-color: @primary-color;
+          left: 50%;
+          bottom: 0;
+          transform: translateX(-50%);
+        }
+      }
+    }
+  }
+  .main-body {
+    display: flex;
+    .main-side {
+      width: @side-width;
+      background-color: @color-background;
+      height: e('calc(100vh - @{header-height} - @{nav-height})');
+      .main-menu-list {
+        .main-menu-li-1, .main-menu-li-2 {
+          background-color: @color-background;
+          margin-top: 0;
+          margin-bottom: 0;
+          &.ant-menu-item-selected {
+            background-color: @primary-color;
+            color: @gray-1;
+            //background-color: color(~`colorPalette("@{primary-color}", 1)`);
+          }
+        }
+      }
+    }
+    .main-content {
+      width: e('calc(100vw - @{side-width})');
+      padding: 20px;
+    }
+  }
+}
+/* 当页面的高度小于 @min-height 时，左侧菜单高度会固定为一个值 */
+@media screen and (max-height: @min-height) {
+  .main-page .main-body .main-side {
+    height: e('calc(@{min-height} - @{header-height} - @{nav-height})');
+  }
+}
+@media screen and (max-width: @min-width) {
+  .main-page .main-body .main-content {
+    width: e('calc(@{min-width} - @{side-width})');
   }
 }
