--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -1,5 +1,7 @@
 @import "../../../node_modules/ng-zorro-antd/src/ng-zorro-antd";
 @import "theme";
+@min-width: 1360px;
+@min-height: 500px;
 @color-main: #eb2f96;
 @primary-color: @color-main;
 
