--- a/src/app/main/system/setting/permission/permission-info/permission-info.component.less
+++ b/src/app/main/system/setting/permission/permission-info/permission-info.component.less
@@ -1,4 +1,4 @@
-@import "../../../../../assets/less/vars";
+@import "../../../../../../assets/less/vars";
 .tree-box {
   margin-right: 15px;
   margin-left: 15px;
