--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -6,7 +6,7 @@ body {
   font-size: 14px;
   font-family: "Microsoft YaHei", "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif, "PingFang SC", "Hiragino Sans GB";
   background: @gray-1;
-  color: @text-main;
+  color: @color-black;
   transition: background 1s cubic-bezier(.075, .82, .165, 1);
   min-width: @min-width;
   min-height: @min-height;
