--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -56,10 +56,20 @@
           background-color: @color-background;
           margin-top: 0;
           margin-bottom: 0;
+          color: @color-black;
           &.ant-menu-item-selected {
             background-color: @primary-color;
             color: @gray-1;
+            .menu-text {
+              color: @gray-1;
+            }
             //background-color: color(~`colorPalette("@{primary-color}", 1)`);
+          }
+        }
+        .main-menu-li-2 {
+          .menu-text {
+            color: @color-primary;
+            font-size: 12px;
           }
         }
       }
