--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -76,7 +76,7 @@
     }
     .main-content {
       width: e('calc(100vw - @{side-width})');
-      padding: 20px;
+      padding: 10px 20px 20px;
     }
   }
 }
