--- a/src/app/shared/component/project/menu-tree/menu-tree.component.less
+++ b/src/app/shared/component/project/menu-tree/menu-tree.component.less
@@ -13,4 +13,22 @@
  */
 .menu-tree-box {
   height: 400px;
+  .tree-item-content {
+    cursor: pointer;
+    &.active {
+      color: @primary-color;
+      background-color: color(~`colorPalette("@{primary-color}", 1)`);
+    }
+    .tag {
+      border: 1px solid @color-border;
+      padding: 0 8px;
+      display: inline-block;
+      font-size: 12px;
+      color: @color-secondary;
+      border-radius: 5px;
+      margin-left: 2px;
+      transform: scale(0.8);
+      vertical-align: 10%;
+    }
+  }
 }
