--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,7 +10,7 @@
     </li>
   </ul>
   <div class="main-body">
-    <div class="main-side">
+    <div class="main-side js-main-side">
       <ul nz-menu class="main-menu-list" [nzMode]="'inline'" appScrollbar>
         <ng-container *ngFor="let m of crtNav?.children">
           <li *ngIf="m.children && m.children.length"
