--- a/src/app/shared/component/project/menu-tree/menu-tree.component.less
+++ b/src/app/shared/component/project/menu-tree/menu-tree.component.less
@@ -16,8 +16,8 @@
   .tree-item-content {
     cursor: pointer;
     &.active {
-      color: @primary-color;
-      background-color: color(~`colorPalette("@{primary-color}", 1)`);
+      //color: @primary-color;
+      //background-color: color(~`colorPalette("@{primary-color}", 1)`);
     }
     .tag {
       border: 1px solid @color-border;
