--- a/src/assets/less/common-util.less
+++ b/src/assets/less/common-util.less
@@ -98,3 +98,14 @@ tr {
 .color-c-11 {
   color: #595959; // 班
 }
+/* 块级元素垂直水平居中 */
+.block-center {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 200px;
+  height: 100px;
+}
