--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -45,3 +45,13 @@ input:-webkit-autofill {
 ::-webkit-scrollbar-thumb:active {
   background-color: rgba(0, 0, 0, .45)
 }
+
+/** 通用样式 **/
+img {
+  display: inline-block;
+}
+.clear:after {
+  display: block;
+  clear: both;
+  content: '';
+}
