--- a/src/assets/less/theme.less
+++ b/src/assets/less/theme.less
@@ -1,9 +1,6 @@
-@import "../../../node_modules/ng-zorro-antd/src/ng-zorro-antd";
-@primary-color: #13c2c2;
-@primary-color-hover: color(~`colorPalette("@{primary-color}", 9)`);
-@icon-url: '/assets/fonts/iconfont';
-@font-size-base: 16px;
-@border-radius-base: 0;
-@border-radius-sm: 0;
-@btn-border-radius-base: 0;
-@btn-border-radius-sm: 0;
+//@import "../../../node_modules/ng-zorro-antd/src/ng-zorro-antd";
+//@primary-color: #13c2c2;
+//@primary-color-hover: color(~`colorPalette("@{primary-color}", 9)`);
+//@icon-url: '/assets/fonts/iconfont';
+//@font-size-base: 16px;
+
