--- a/src/styles.less
+++ b/src/styles.less
@@ -1,12 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/ng-zorro-antd/src/ng-zorro-antd";
 @import "../node_modules/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css";
+@import "../node_modules/wangeditor/release/wangEditor.min.css";
 @import "assets/less/base";
 @import "assets/less/base-project";
-@import "assets/less/vars";
 //@import "assets/less/theme";
+@import "assets/less/vars";
 @import "assets/less/iconfont";
 @import "assets/less/common-font";
 @import "assets/less/common";
 @import "assets/less/common-util";
 @import "assets/less/common-antd";
 @import "assets/less/common-project";
+@import "assets/less/default";
