--- a/src/assets/less/common-project.less
+++ b/src/assets/less/common-project.less
@@ -13,6 +13,10 @@
 .input-span.ant-col-21 {
   width: 86.1%;
 }
+.w-e-toolbar .w-e-menu {
+  padding: 0 2px;
+  font-size: 12px!important;
+}
 .w-e-menu {
   z-index: 89!important;
 }
