--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -1,7 +1,11 @@
-@import "../../../node_modules/ng-zorro-antd/src/ng-zorro-antd";
+//@import "../../../node_modules/ng-zorro-antd/src/ng-zorro-antd";
 @import "theme";
 @min-width: 1360px;
 @min-height: 500px;
+@header-height: 50px;
+@nav-height: 36px;
+@side-width: 200px;
+@breadcrumb-height: 34px;
 @color-main: #eb2f96;
 @primary-color: @color-main;
 
